[package]
name = "rust_socket_arustoid"
version = "0.1.0"
authors = ["bernardcjason@gmail.com <bernardcjason@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ws = "0.9.1"
rocket = "0.4.6"
lazy_static = "1.0"


[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = [ "tera_templates" , "serve"]